--- a/LiteTube/app.config
+++ b/LiteTube/app.config
@@ -15,6 +15,7 @@
   <uri>
     <schemeSettings>
       <add name="https" genericUriParserOptions="DontUnescapePathDotsAndSlashes" />
+      <add name="http" genericUriParserOptions="DontUnescapePathDotsAndSlashes" />
     </schemeSettings>
   </uri>
 </configuration>
