LiteTube for Windows 10 begin

--- a/.hgignore
+++ b/.hgignore
@@ -17,3 +17,4 @@ LiteTube/Assets/ScreenShots/wp_ss_20160203_0006.png
 LiteTube/Assets/ScreenShots/wp_ss_20160204_0001.png
 LiteTube/Properties/AssemblyInfo.cs
 Fast app resume backstack sample/*
+LiteTube10/obj/*
