--- a/.hgignore
+++ b/.hgignore
@@ -18,3 +18,4 @@ LiteTube/Assets/ScreenShots/wp_ss_20160204_0001.png
 LiteTube/Properties/AssemblyInfo.cs
 Fast app resume backstack sample/*
 LiteTube10/obj/*
+LiteTube10/bin/*
