--- a/LiteTube/LiteTube.csproj
+++ b/LiteTube/LiteTube.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Common\Tools\Theme.cs" />
     <Compile Include="Controls\LiteTubePlayer.cs" />
     <Compile Include="Converters\ColumnSpanConverter.cs" />
+    <Compile Include="Converters\DateTimeToDispalyStringConverter.cs" />
     <Compile Include="Converters\DateTimeToStringConverter.cs" />
     <Compile Include="Converters\LoginStatusTextConverter.cs" />
     <Compile Include="DataClasses\SearchTypes.cs" />
