--- a/LiteTube10/LiteTube10.csproj
+++ b/LiteTube10/LiteTube10.csproj
@@ -92,9 +92,297 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="..\LiteTube\DataModel\client_secrets.json">
+      <Link>DataModel\client_secrets.json</Link>
+    </None>
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\LiteTube\Common\Commands\RelayCommand.cs">
+      <Link>Common\Commands\RelayCommand.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\Commands\SubscribeCommand.cs">
+      <Link>Common\Commands\SubscribeCommand.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\Commands\UnsubscribeCommand.cs">
+      <Link>Common\Commands\UnsubscribeCommand.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\Extensions\ItemsControlExtensions.cs">
+      <Link>Common\Extensions\ItemsControlExtensions.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\Extensions\PropertyExtensions.cs">
+      <Link>Common\Extensions\PropertyExtensions.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\Helpers\LayoutHelper.cs">
+      <Link>Common\Helpers\LayoutHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\Helpers\SettingsHelper.cs">
+      <Link>Common\Helpers\SettingsHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\Helpers\VisualHelper.cs">
+      <Link>Common\Helpers\VisualHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\I18nLanguages.cs">
+      <Link>Common\I18nLanguages.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\IDialogService.cs">
+      <Link>Common\IDialogService.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\LiteTubeException.cs">
+      <Link>Common\LiteTubeException.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\MediaPlayerVisualStates.cs">
+      <Link>Common\MediaPlayerVisualStates.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\NavigationObject.cs">
+      <Link>Common\NavigationObject.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\Notifier\Notifier.cs">
+      <Link>Common\Notifier\Notifier.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\Notifier\UpdateSettingsEventArgs.cs">
+      <Link>Common\Notifier\UpdateSettingsEventArgs.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\SessionType.cs">
+      <Link>Common\SessionType.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\Tools\Theme.cs">
+      <Link>Common\Tools\Theme.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Common\VideoQuality.cs">
+      <Link>Common\VideoQuality.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\BooleanToVisibilityConverter.cs">
+      <Link>Converters\BooleanToVisibilityConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\ColumnSpanConverter.cs">
+      <Link>Converters\ColumnSpanConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\CommentMarginConverter.cs">
+      <Link>Converters\CommentMarginConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\CountToVisibilityConverter.cs">
+      <Link>Converters\CountToVisibilityConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\DateTimeToDispalyStringConverter.cs">
+      <Link>Converters\DateTimeToDispalyStringConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\DateTimeToStringConverter.cs">
+      <Link>Converters\DateTimeToStringConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\DurationConverter.cs">
+      <Link>Converters\DurationConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\InverseBooleanConverter.cs">
+      <Link>Converters\InverseBooleanConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\LoginStatusTextConverter.cs">
+      <Link>Converters\LoginStatusTextConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\LowerCaseConverter.cs">
+      <Link>Converters\LowerCaseConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\ObjectToVisibilityConverter.cs">
+      <Link>Converters\ObjectToVisibilityConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\StringToVisibilityConverter.cs">
+      <Link>Converters\StringToVisibilityConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\TimeSpanFormatConverter.cs">
+      <Link>Converters\TimeSpanFormatConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\Converters\UppercaseConverter.cs">
+      <Link>Converters\UppercaseConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\DataClasses.cs">
+      <Link>DataClasses\DataClasses.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\IActivity.cs">
+      <Link>DataClasses\IActivity.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\IChannel.cs">
+      <Link>DataClasses\IChannel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\IChannelList.cs">
+      <Link>DataClasses\IChannelList.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\ICommentList.cs">
+      <Link>DataClasses\ICommentList.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\IGuideCategory.cs">
+      <Link>DataClasses\IGuideCategory.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\IPlayList.cs">
+      <Link>DataClasses\IPlayList.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\IPlayListItem.cs">
+      <Link>DataClasses\IPlayListItem.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\IPlaylistItemList.cs">
+      <Link>DataClasses\IPlaylistItemList.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\IProfile.cs">
+      <Link>DataClasses\IProfile.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\IResponceList.cs">
+      <Link>DataClasses\IResponceList.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\ISnippet.cs">
+      <Link>DataClasses\ISnippet.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\ISnippetList.cs">
+      <Link>DataClasses\ISnippetList.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\ISubscriptionList.cs">
+      <Link>DataClasses\ISubscriptionList.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\IVideoCategory.cs">
+      <Link>DataClasses\IVideoCategory.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\IVideoItem.cs">
+      <Link>DataClasses\IVideoItem.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\RatingEnum.cs">
+      <Link>DataClasses\RatingEnum.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataClasses\SearchTypes.cs">
+      <Link>DataClasses\SearchTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataModel\ConnectionListener.cs">
+      <Link>DataModel\ConnectionListener.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataModel\Context.cs">
+      <Link>DataModel\Context.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataModel\DataSourceExceptionWrapper.cs">
+      <Link>DataModel\DataSourceExceptionWrapper.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataModel\IDataSource.cs">
+      <Link>DataModel\IDataSource.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataModel\IYouTubeService.cs">
+      <Link>DataModel\IYouTubeService.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataModel\NullableDataSource.cs">
+      <Link>DataModel\NullableDataSource.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataModel\PlaylistCahce.cs">
+      <Link>DataModel\PlaylistCahce.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataModel\RemoteDataSource.cs">
+      <Link>DataModel\RemoteDataSource.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataModel\SubscriptionsHolder.cs">
+      <Link>DataModel\SubscriptionsHolder.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataModel\VideoItemsCache.cs">
+      <Link>DataModel\VideoItemsCache.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataModel\YouTubeServiceControl.cs">
+      <Link>DataModel\YouTubeServiceControl.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\DataModel\YouTubeWeb.cs">
+      <Link>DataModel\YouTubeWeb.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\ActivitySectionViewModel.cs">
+      <Link>ViewModels\ActivitySectionViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\ChannelPageViewModel.cs">
+      <Link>ViewModels\ChannelPageViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\ChannelsPageViewModel.cs">
+      <Link>ViewModels\ChannelsPageViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\CommentsViewModel.cs">
+      <Link>ViewModels\CommentsViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\FavoritesViewModel.cs">
+      <Link>ViewModels\FavoritesViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\HistoryPageViewModel.cs">
+      <Link>ViewModels\HistoryPageViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\LikedViewModel.cs">
+      <Link>ViewModels\LikedViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\MainViewModel.cs">
+      <Link>ViewModels\MainViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\MenuPageViewModel.cs">
+      <Link>ViewModels\MenuPageViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\MostPopularViewModel.cs">
+      <Link>ViewModels\MostPopularViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\NavigationPanelViewModel.cs">
+      <Link>ViewModels\NavigationPanelViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\Nodes\ChannelNodeViewModel.cs">
+      <Link>ViewModels\Nodes\ChannelNodeViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\Nodes\CommentNodeViewModel.cs">
+      <Link>ViewModels\Nodes\CommentNodeViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\Nodes\GuideCategoryNodeViewModel.cs">
+      <Link>ViewModels\Nodes\GuideCategoryNodeViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\Nodes\NodeViewModelBase.cs">
+      <Link>ViewModels\Nodes\NodeViewModelBase.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\Nodes\PlayListItemNodeViewModel.cs">
+      <Link>ViewModels\Nodes\PlayListItemNodeViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\Nodes\SubscriptionNodeViewModel.cs">
+      <Link>ViewModels\Nodes\SubscriptionNodeViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\Nodes\VideoCategoryNodeViewModel.cs">
+      <Link>ViewModels\Nodes\VideoCategoryNodeViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\Nodes\VideoItemViewModel.cs">
+      <Link>ViewModels\Nodes\VideoItemViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\ProfileSectionViewModel.cs">
+      <Link>ViewModels\ProfileSectionViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\ProgressIndicatorViewModel.cs">
+      <Link>ViewModels\ProgressIndicatorViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\PropertyChangedBase.cs">
+      <Link>ViewModels\PropertyChangedBase.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\RecommendedSectionViewModel.cs">
+      <Link>ViewModels\RecommendedSectionViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\RelatedVideosViewModel.cs">
+      <Link>ViewModels\RelatedVideosViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\SearchPageViewModel.cs">
+      <Link>ViewModels\SearchPageViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\Search\SearchBaseViewModel.cs">
+      <Link>ViewModels\Search\SearchBaseViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\Search\SearchChannelsViewModel.cs">
+      <Link>ViewModels\Search\SearchChannelsViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\Search\SearchVideoViewModel.cs">
+      <Link>ViewModels\Search\SearchVideoViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\SectionBaseViewModel.cs">
+      <Link>ViewModels\SectionBaseViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\SettingsViewModel.cs">
+      <Link>ViewModels\SettingsViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\SubscriptionChannelsViewModel.cs">
+      <Link>ViewModels\SubscriptionChannelsViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\VideoCategorySectionViewModel.cs">
+      <Link>ViewModels\VideoCategorySectionViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\LiteTube\ViewModels\VideoPageViewModel.cs">
+      <Link>ViewModels\VideoPageViewModel.cs</Link>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
