--- a/LiteTube10/project.json
+++ b/LiteTube10/project.json
@@ -1,9 +1,13 @@
 ﻿{
   "dependencies": {
+    "Google.Apis": "1.11.1",
+    "Google.Apis.YouTube.v3": "1.12.0.417",
     "Microsoft.ApplicationInsights": "1.0.0",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
     "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "MyToolkit": "2.5.11",
+    "MyToolkit.Extended": "2.5.11"
   },
   "frameworks": {
     "uap10.0": {}
