--- a/.hgignore
+++ b/.hgignore
@@ -19,3 +19,4 @@ LiteTube/Properties/AssemblyInfo.cs
 Fast app resume backstack sample/*
 LiteTube10/obj/*
 LiteTube10/bin/*
+LiteTube10/LiteTube10.csproj.user
