--- a/LiteTube/LiteTube.csproj
+++ b/LiteTube/LiteTube.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Converters\DateTimeToDispalyStringConverter.cs" />
     <Compile Include="Converters\DateTimeToStringConverter.cs" />
     <Compile Include="Converters\LoginStatusTextConverter.cs" />
+    <Compile Include="DataClasses\IPlaylistList.cs" />
     <Compile Include="DataClasses\SearchTypes.cs" />
     <Compile Include="DataModel\YouTube.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -237,7 +238,9 @@
     <Compile Include="ViewModels\MenuPageViewModel.cs" />
     <Compile Include="ViewModels\Nodes\GuideCategoryNodeViewModel.cs" />
     <Compile Include="ViewModels\Nodes\PlayListItemNodeViewModel.cs" />
+    <Compile Include="ViewModels\Nodes\PlaylistNodeViewModel.cs" />
     <Compile Include="ViewModels\Nodes\SubscriptionNodeViewModel.cs" />
+    <Compile Include="ViewModels\PlaylistListViewModel.cs" />
     <Compile Include="ViewModels\ProfileSectionViewModel.cs" />
     <Compile Include="ViewModels\ProgressIndicatorViewModel.cs" />
     <Compile Include="ViewModels\RecommendedSectionViewModel.cs" />
