--- a/LiteTube/app.config
+++ b/LiteTube/app.config
@@ -10,6 +10,10 @@
         <assemblyIdentity name="MyToolkit" publicKeyToken="3e349a1360994d26" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.5.11.0" newVersion="2.5.11.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Advertising.Mobile.UI" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.2.960.0" newVersion="6.2.960.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <uri>
