--- a/LiteTube/packages.config
+++ b/LiteTube/packages.config
@@ -4,6 +4,9 @@
   <package id="Google.Apis.Auth" version="1.11.1" targetFramework="wp81" />
   <package id="Google.Apis.Core" version="1.11.1" targetFramework="wp81" />
   <package id="Google.Apis.YouTube.v3" version="1.12.0.417" targetFramework="wp81" />
+  <package id="Microsoft.AdMediator.WindowsPhone8.GoogleAdMob" version="2.1.3" targetFramework="wp81" />
+  <package id="Microsoft.AdMediator.WindowsPhone81SL.MicrosoftAdvertising" version="2.1.3" targetFramework="wp81" />
+  <package id="Microsoft.Advertising.WindowsPhone.SL81" version="8.1.50112.0" targetFramework="wp81" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="wp81" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="wp81" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="wp81" />
