--- a/.hgignore
+++ b/.hgignore
@@ -20,3 +20,5 @@ Fast app resume backstack sample/*
 LiteTube10/obj/*
 LiteTube10/bin/*
 LiteTube10/LiteTube10.csproj.user
+packages/*
+.vs/LiteTube/v14/.suo
