--- a/LiteTube/AdMediator.config
+++ b/LiteTube/AdMediator.config
@@ -1,8 +1,65 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <AdMediatorConfiguration xmlns:i="http://www.w3.org/2001/XMLSchema-instance">
-  <BaseConfiguration />
+  <BaseConfiguration>
+    <AdAdapters>
+      <AdAdapterInfo>
+        <Metadata>
+          <Property>
+            <Key>ApplicationId</Key>
+            <Value>a5239a3d-fa0b-4995-9c19-0f7a998b83c3</Value>
+          </Property>
+        </Metadata>
+        <Name>MicrosoftAdvertising</Name>
+        <Weight>1</Weight>
+      </AdAdapterInfo>
+      <AdAdapterInfo>
+        <Metadata>
+          <Property>
+            <Key>Pub</Key>
+            <Value>1100025508</Value>
+          </Property>
+        </Metadata>
+        <Name>Smaato</Name>
+        <Weight>1</Weight>
+      </AdAdapterInfo>
+    </AdAdapters>
+    <AdControlConfigurations>
+      <AdControlConfiguration>
+        <AdAdapters>
+          <AdAdapterInfo>
+            <Metadata>
+              <Property>
+                <Key>AdUnitId</Key>
+                <Value>11643034</Value>
+              </Property>
+              <Property>
+                <Key>Height</Key>
+                <Value>50</Value>
+              </Property>
+              <Property>
+                <Key>Width</Key>
+                <Value>320</Value>
+              </Property>
+            </Metadata>
+            <Name>MicrosoftAdvertising</Name>
+          </AdAdapterInfo>
+          <AdAdapterInfo>
+            <Metadata>
+              <Property>
+                <Key>Adspace</Key>
+                <Value>130168472</Value>
+              </Property>
+            </Metadata>
+            <Name>Smaato</Name>
+          </AdAdapterInfo>
+        </AdAdapters>
+        <Id>AdMediator-Id-C5047D00-4321-4095-A379-3B9EA68B22A6</Id>
+        <Name>AdMediator_F3EEB8</Name>
+      </AdControlConfiguration>
+    </AdControlConfigurations>
+  </BaseConfiguration>
   <RefreshRate>30</RefreshRate>
   <SchemaVersion>2.0.1</SchemaVersion>
-  <UpdatedDateTime>2016-08-07T16:43:49.5199443Z</UpdatedDateTime>
+  <UpdatedDateTime>2016-09-03T17:40:11.9397031Z</UpdatedDateTime>
   <UseRoundRobin>true</UseRoundRobin>
 </AdMediatorConfiguration>
