--- a/LiteTube/app.config
+++ b/LiteTube/app.config
@@ -1,29 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
-				<assemblyIdentity name="mscorlib" publicKeyToken="B77A5C561934E089" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
+				<assemblyIdentity name="mscorlib" publicKeyToken="B77A5C561934E089" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
 			</dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0"/>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="MyToolkit" publicKeyToken="3e349a1360994d26" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-2.5.11.0" newVersion="2.5.11.0"/>
+        <assemblyIdentity name="MyToolkit" publicKeyToken="3e349a1360994d26" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.5.11.0" newVersion="2.5.11.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Advertising.Mobile.UI" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-6.2.960.0" newVersion="6.2.960.0"/>
+        <assemblyIdentity name="Microsoft.Advertising.Mobile.UI" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.2.960.0" newVersion="6.2.960.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <uri>
     <schemeSettings>
-      <add name="https" genericUriParserOptions="DontUnescapePathDotsAndSlashes"/>
-      <add name="http" genericUriParserOptions="DontUnescapePathDotsAndSlashes"/>
+      <add name="https" genericUriParserOptions="DontUnescapePathDotsAndSlashes" />
+      <add name="http" genericUriParserOptions="DontUnescapePathDotsAndSlashes" />
     </schemeSettings>
   </uri>
 </configuration>
