--- a/LiteTube/packages.config
+++ b/LiteTube/packages.config
@@ -4,9 +4,8 @@
   <package id="Google.Apis.Auth" version="1.11.1" targetFramework="wp81" />
   <package id="Google.Apis.Core" version="1.11.1" targetFramework="wp81" />
   <package id="Google.Apis.YouTube.v3" version="1.12.0.417" targetFramework="wp81" />
-  <package id="Microsoft.AdMediator.WindowsPhone8.GoogleAdMob" version="2.1.3" targetFramework="wp81" />
+  <package id="Microsoft.AdMediator.WindowsPhone8.Smaato" version="2.1.3" targetFramework="wp81" />
   <package id="Microsoft.AdMediator.WindowsPhone81SL.MicrosoftAdvertising" version="2.1.3" targetFramework="wp81" />
-  <package id="Microsoft.Advertising.WindowsPhone.SL81" version="8.1.50112.0" targetFramework="wp81" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="wp81" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="wp81" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="wp81" />
@@ -14,6 +13,7 @@
   <package id="MyToolkit" version="2.5.11.0" targetFramework="wp81" />
   <package id="MyToolkit.Extended" version="2.5.11.0" targetFramework="wp81" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="wp81" />
+  <package id="SOMAW81_Package" version="1.5.1" targetFramework="wp81" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp81" />
   <package id="YoutubeInfoLite" version="1.0.2" targetFramework="wp81" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="wp81" />
