--- a/LiteTube/LiteTube.csproj
+++ b/LiteTube/LiteTube.csproj
@@ -105,7 +105,7 @@
     <Compile Include="Common\Commands\RelayCommand.cs" />
     <Compile Include="Common\Commands\SubscribeCommand.cs" />
     <Compile Include="Common\Commands\UnsubscribeCommand.cs" />
-    <Compile Include="Common\ContextMenuProvider.cs" />
+    <Compile Include="Common\ContextMenuStrategy.cs" />
     <Compile Include="Common\Exceptions\PlaylistNotFoundException.cs" />
     <Compile Include="Common\Helpers\AdvHelper.cs" />
     <Compile Include="Common\Helpers\VideoPageViewHelper.cs" />
@@ -120,7 +120,13 @@
       <DependentUpon>ComboBox.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\ListBoxTemplateSelector.cs" />
+    <Compile Include="Controls\ListViewItem.xaml.cs">
+      <DependentUpon>ListViewItem.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\LiteTubePlayer.cs" />
+    <Compile Include="Controls\PlaylistsContainer.xaml.cs">
+      <DependentUpon>PlaylistsContainer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Converters\ColumnSpanConverter.cs" />
     <Compile Include="Converters\DateTimeToDispalyStringConverter.cs" />
     <Compile Include="Converters\DateTimeToStringConverter.cs" />
@@ -132,6 +138,7 @@
     <Compile Include="DataClasses\SearchFilter.cs" />
     <Compile Include="DataClasses\MActivityList.cs" />
     <Compile Include="DataClasses\SearchTypes.cs" />
+    <Compile Include="DataModel\PrivacyStatus.cs" />
     <Compile Include="DataModel\VideoQualityHelper.cs" />
     <Compile Include="DataModel\YouTube.cs" />
     <Compile Include="Interactivity\HighlightUrlBehavior.cs" />
@@ -262,9 +269,11 @@
     <Compile Include="ViewModels\Nodes\PlayListItemNodeViewModel.cs" />
     <Compile Include="ViewModels\Nodes\PlaylistNodeViewModel.cs" />
     <Compile Include="ViewModels\Nodes\SubscriptionNodeViewModel.cs" />
+    <Compile Include="ViewModels\Playlist\IPlaylistsSevice.cs" />
     <Compile Include="ViewModels\Playlist\PlaylistPageViewModel.cs" />
     <Compile Include="ViewModels\Playlist\MyPlaylistListViewModel.cs" />
     <Compile Include="ViewModels\Playlist\PlaylistListViewModel.cs" />
+    <Compile Include="ViewModels\Playlist\PlaylistsContainerViewModel.cs" />
     <Compile Include="ViewModels\Playlist\PlaylistVideosViewModel.cs" />
     <Compile Include="ViewModels\Playlist\PlaylistVideoPageViewModel.cs" />
     <Compile Include="ViewModels\ProfileSectionViewModel.cs" />
@@ -315,6 +324,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Controls\ListViewItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\NavigationButton.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -324,6 +337,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Controls\NavigationPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\PlaylistsContainer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
