--- a/LiteTube/packages.config
+++ b/LiteTube/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="wp81" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="wp81" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="wp81" />
+  <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="wp81" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="wp81" />
   <package id="MyToolkit" version="2.5.11.0" targetFramework="wp81" />
   <package id="MyToolkit.Extended" version="2.5.11.0" targetFramework="wp81" />
