--- a/LiteTube/app.config
+++ b/LiteTube/app.config
@@ -20,6 +20,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <runtime>
+    <ThrowUnobservedTaskExceptions enabled="true"/>
+  </runtime>
   <uri>
     <schemeSettings>
       <add name="https" genericUriParserOptions="DontUnescapePathDotsAndSlashes" />
